# fastapi-test-project

./: .gitignore  pyproject.toml
app/: main.py  schemas.py
app/database/: announcements.py  models.py  users.py
app/routers/: announcements.py
