[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
pydantic = "^2.4.2"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.21"


[tool.poetry.group.dev.dependencies]
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
